RESOLVED FIXED26924
[Chromium] Linux: fix assertion when rendering google.com.kh.
https://bugs.webkit.org/show_bug.cgi?id=26924
Summary [Chromium] Linux: fix assertion when rendering google.com.kh.
Adam Langley
Reported 2009-07-02 10:28:38 PDT
Some shapers (i.e. Khmer) will produce cluster logs which report that /no/ code points contributed to certain glyphs. Because of this, we take any code point which contributed to the glyph in question, or any subsequent glyph. If we run off the end, then we take the last code point.
Attachments
patch (2.22 KB, patch)
2009-07-02 10:33 PDT, Adam Langley
eric: review-
patch (4.54 KB, patch)
2009-07-02 15:47 PDT, Adam Langley
eric: review+
Adam Langley
Comment 1 2009-07-02 10:33:32 PDT
Eric Seidel (no email)
Comment 2 2009-07-02 11:18:52 PDT
Comment on attachment 32187 [details] patch Needs a layout test, or explanation as to why one is impossible. I assume one is impossible because this requires special fonts to be installed?
Adam Langley
Comment 3 2009-07-02 15:47:03 PDT
Eric Seidel (no email)
Comment 4 2009-07-10 18:01:32 PDT
Comment on attachment 32202 [details] patch Fantastic.
Note You need to log in before you can comment on or make changes to this bug.