2009-07-13  Adam Langley  <agl@google.com>

Reviewed by Eric Seidel.

        Chromium Linux: fix assertion when rendering google.com.kh

        https://bugs.webkit.org/show_bug.cgi?id=26924

        Some shapers (i.e. Khmer) will produce cluster logs which report that
        /no/ code points contributed to certain glyphs. Because of this, we
        take any code point which contributed to the glyph in question, or any
        subsequent glyph.  If we run off the end, then we take the last code
        point.

        Added LayoutTests/fast/text/international/khmar-selection.html

        * platform/graphics/chromium/FontLinux.cpp:
        (WebCore::Font::offsetForPositionForComplexText):


Canonical link: https://commits.webkit.org/37467@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45833 268f45cc-cd09-0410-ab3c-d52691b4dbfc